src/main/java/com/example/bookshopapp/errors/BookstoreApiWrongParameterException.java
package com.example.bookshopapp.errors;

public class BookstoreApiWrongParameterException extends Exception {
    public BookstoreApiWrongParameterException(String message) {
        super(message);
    }
}
